--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-  "name": "unfulvio/wp-php-console",
+  "name": "AbhiFutureTech/php-wp-console",
   "description": "A WordPress implementation of PHP Console.",
   "type": "wordpress-plugin",
   "version": "1.6.0",
   "keywords": ["wordpress", "debug", "debugging", "development", "php-console", "console", "terminal", "command-line", "cli" ],
-  "homepage": "https://github.com/unfulvio/wp-php-console",
+  "homepage": "https://github.com/AbhiFutureTech/php-wp-console",
   "license": "GPLv3.0+",
   "authors": [
     {
-      "name": "Fulvio Notarstefano",
-      "email": "fulvio.notarstefano@gmail.com",
-      "homepage": "https://github.com/unfulvio",
+      "name": "Abhijit Patil",
+      "email": "abhianantapatil@gmail.com",
+      "homepage": "https://github.com/AbhiFutureTech",
       "role": "Developer"
     }
   ],
